# llm-leaderboard

./: README.md  benchmarks.csv  leaderboard.csv  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: check-filesize.yaml  upload-hf-spaces.yaml
.streamlit/: config.toml
data/: benchmarks.csv  leaderboard.csv  sources.csv
